@@ -1,0 +1,33 @@
+# Vino Crescini  <jcrescin@cit.uws.edu.au>
+
+TOPSRCDIR = ..
+CFLAGS = -O2 -Wall -ansi -I$(TOPSRCDIR)/include -L$(TOPSRCDIR)/lib
+TARGETS = libexp.a
+INCLUDES = atom.h
+
+all : public
+
+public : $(TARGETS)
+	@mkdir -p $(TOPSRCDIR)/include
+	@mkdir -p $(TOPSRCDIR)/lib
+	@for i in $(INCLUDES); do \
+	ln -sf ../exp/$$i $(TOPSRCDIR)/include; \
+	done
+	@for i in $(TARGETS); do \
+	ln -sf ../exp/$$i $(TOPSRCDIR)/lib; \
+	done
+
+libexp.a : atom.o
+	$(AR) -rcs $(@) atom.o
+
+atom.o : atom.h atom.c
+	$(CC) $(CFLAGS) -o $(@) -c atom.c
+
+clean :
+	$(RM) $(TARGETS) *.o
+	@for i in $(INCLUDES); do \
+	$(RM) $(TOPSRCDIR)/include/$$i; \
+	done
+	@for i in $(TARGETS); do \
+	$(RM) $(TOPSRCDIR)/lib/$$i; \
+	done
