@@ -1,5 +1,11 @@
 2002-08-16  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* exp/Makefile :
+	* exp/atom.h :
+	* exp/atom.c :
+
+	  - Added atom.
+
 	* parser/parser.y :
 	* parser/scanner.l :
 
